material/falco_handler/falco-handler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco-handler
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: falco-handler
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
