material/falco_handler/falco-handler-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-falcosidekick-to-handler
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: falco-handler
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: falco
          podSelector:
            matchLabels:
              app.kubernetes.io/name: falcosidekick
      ports:
        - protocol: TCP
          port: 5000
